# timia

./: .env.example  .env.pack.example  .env.prod  .env.prod.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  start.zsh
.cursor/rules/: core-service.mdc  ui-interaction-design.mdc
.github/workflows/: deploy.yml
apps/api/: pyproject.toml
apps/web/: package-lock.json  package.json
codes/api/: Dockerfile  pyproject.toml
codes/api/app/core/: config.py  security.py
codes/api/app/migrations/: env.py  script.py.mako
codes/api/app/migrations/versions/: 0001_init_schema.py  0003_add_workspace_description.py  0005_drop_item_due_at.py  0007_comment_threading.py  0008_unify_owner_member_roles.py  0013_users_system_role.py
codes/api/app/models/: comment.py  item.py
codes/api/app/routes/: auth.py  items.py  users.py
codes/api/app/routes/views/: analytics.py  users.py
codes/api/app/schemas/views/: analytics.py  schedule.py
codes/api/app/scripts/: clear_workspace_items.py
codes/api/app/services/views/: my_analytics.py  schedule_layout.py  task_drawer.py
codes/api/scripts/: export_openapi.py
codes/api/tests/: conftest.py  test_schedule_views.py  test_views_phase3.py
codes/mobile/: README.md
deploy/: _common.sh  bootstrap.sh  dc-prod.sh  dc.sh  deploy.sh  docker-mirror.sh  env-path.sh  fix-env-git.sh  git-update.sh  install-images.sh  install-poll-cron.sh  local.sh  nginx.conf  pack-local.sh  poll-deploy.sh  quick.sh  remote.sh  upload-to-server.sh  verify.sh
scripts/: clean_icon_right_edge.py  generate_brand_assets.py
(+220 files in other folders)
